syntax = "proto3";

option go_package = "github.com/sumimakito/raft/pb";

package pb;

enum LogType {
  UNKNOWN = 0;
  COMMAND = 1;
  CONFIGURATION = 2;
}

message LogMeta {
  uint64 index = 1;
  uint64 term = 2;
}

message LogBody {
  LogType type = 1;
  bytes data = 2;
}

message Log {
  LogMeta meta = 1;
  LogBody body = 2;
}